--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -24,3 +24,40 @@ input {
 #table-directory th, #table-directory thead {
     /*font-size: 1.3rem;*/
 }
+
+/* -------------------------------- 
+
+Коррекция отображения компонента дата и время
+
+-------------------------------- */
+.date-picker {
+    z-index: 202;
+}
+
+.date-picker-wrapper {
+    z-index: 201;
+}
+
+    .date-picker-wrapper .gap {
+        z-index: 201;
+    }
+
+        .date-picker-wrapper .gap .gap-line .gap-1 {
+            z-index: 201;
+        }
+
+        .date-picker-wrapper .gap .gap-line .gap-2 {
+            z-index: 202;
+        }
+
+        .date-picker-wrapper .gap .gap-line .gap-3 {
+            z-index: 202;
+        }
+
+        .date-picker-wrapper .gap .gap-top-mask {
+            z-index: 203;
+        }
+
+        .date-picker-wrapper .gap .gap-bottom-mask {
+            z-index: 203;
+        }
