--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -133,7 +133,14 @@
         <div class="row" style="margin-bottom:0.5rem">
             <div class="col-md-6 mb-1 text-left">
                 <label for="add_edit_num" class="col-form-label">@DirectoryResource.title_add_edit_num:</label>
-                <input type="number" class="form-control" id="add_edit_num" name="add_edit_num" disabled="disabled">
+                <div class="input-group">
+                    <input type="number" class="form-control" id="add_edit_num" name="add_edit_num" disabled="disabled">
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-warning btn" id="add_search_car" title="Определить вагон">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
                 <div class="invalid-feedback">
 
                 </div>
