web form arrival select cars

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -423,9 +423,9 @@
                                                 <button type="button" class="btn btn-danger btn" id="card_vag_add" data-mode="edit-global" data-edit="" data-form="transceiver" title="Добавить новую запись карточки вагона в справочник 'Карточка вагона', информация берется автоматически из ЭПД и БД УЗ">
                                                     <i class="fa fa-save" aria-hidden="true"></i>
                                                 </button>
-                                                <button type="button" class="btn btn-danger btn" id="card_vag_searsh" data-mode="all" data-edit="" data-form="transceiver" title="Получить новую запись карточки вагона для справочника 'Карточка вагона', информация берется автоматически из БД УЗ">
+                                                @*<button type="button" class="btn btn-danger btn" id="card_vag_searsh" data-mode="all" data-edit="" data-form="transceiver" title="Получить новую запись карточки вагона для справочника 'Карточка вагона', информация берется автоматически из БД УЗ">
                                                     <i class="fa fa-search-plus" aria-hidden="true"></i>
-                                                </button>
+                                                </button>*@
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
