form edit dir_wagon

--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -192,15 +192,21 @@
             </div>
         </div>
         <div class="row" style="margin-bottom:0.5rem">
-            <div class="col-md-6 mb-1 text-left">
+            <div class="col-md-5 mb-1 text-left">
                 <label for="add_edit_owner_car" class="col-form-label">@DirectoryResource.title_add_edit_owner_car:</label>
                 <select class="form-control" id="add_edit_owner_car" name="add_edit_owner_car" disabled="disabled"></select>
                 <div class="invalid-feedback">
                 </div>
             </div>
-            <div class="col-md-6 mb-1 text-left">
+            <div class="col-md-5 mb-1 text-left">
                 <label for="add_edit_operator_uz_car" class="col-form-label">@DirectoryResource.title_add_edit_operator_uz_car:</label>
                 <select class="form-control" id="add_edit_operator_uz_car" name="add_edit_operator_uz_car" disabled="disabled"></select>
+                <div class="invalid-feedback">
+                </div>
+            </div>
+            <div class="col-md-2 mb-1 text-left">
+                <label for="add_edit_change_operator" class="col-form-label">@DirectoryResource.title_add_edit_change_operator:</label>
+                <input type="datetime" class="form-control" id="add_edit_change_operator" name="add_edit_change_operator" disabled="disabled">
                 <div class="invalid-feedback">
                 </div>
             </div>
