--- a/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
@@ -31,7 +31,7 @@
             <div class="card border-dark mb-3">
                 <div class="card-header bg-secondary text-white">@DirectoryResource.cargo_title</div>
                 <div class="card-body text-dark pl-3 pr-3">
-                    <table class="table table-striped table-bordered" id="table-directory" style="width:100%"></table>
+                    <table class="table table-striped table-bordered" id="table-directory" style="width:100%; table-layout: fixed""></table>
                 </div>
             </div>
         </div>
