--- a/WEB_UI/Areas/IDSMORS/Views/Home/ReportWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ReportWagons.cshtml
@@ -46,7 +46,7 @@
         <div class="card-body">
             <div class="form-row">
                 <div class="col-md-12 mb-3">
-                    <table class='table table-striped table-bordered' id="table-wms" style="width:100%" cellpadding="0"></table>
+                    <table class='table table-striped table-bordered' id="table-wms" style="width:100%; table-layout: fixed" cellpadding="0"></table>
                 </div>
             </div>
         </div>
