--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -90,7 +90,7 @@
         <div class="card border-dark mb-3">
             <div class="card-header bg-secondary text-white">Поезда по прибытию</div>
             <div class="card-body text-dark pl-3 pr-3">
-                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%"></table>
+                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%; table-layout: fixed"></table>
             </div>
         </div>
     </div>
@@ -173,7 +173,7 @@
                                     @*<h5 class="card-title">Special title treatment</h5>
                                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>*@
-                                    <table class="table table-striped table-bordered" id="table-arrival-cars" style="width:100%; font-size:0.8rem;"></table>
+                                    <table class="table table-striped table-bordered" id="table-arrival-cars" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
                                 </div>
                                 <div class="card-footer text-muted">
                                     
@@ -471,21 +471,27 @@
                                             </div>
                                         </div>
                                         <div class="form-row">
-                                            <div class="col-md-4 mb-1 text-left">
+                                            <div class="col-md-3 mb-1 text-left">
                                                 <label for="card_vag_kol_os" class="col-form-label">@IDSRWTResource.title_kol_os:</label>
                                                 <select class="form-control inp-epd" id="card_vag_kol_os" name="card_vag_kol_os" title="ЭПД [OTPR/VAGON/kol_os] -> Справочник 'Карточка вагона' -> Количество осей" data-mode="all" data-edit="" data-form="transceiver" data-type="vagon-card"></select>
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
-                                            <div class="col-md-4 mb-1 text-left">
+                                            <div class="col-md-3 mb-1 text-left">
                                                 <label for="uz_vag_gruzp" class="col-form-label">@IDSRWTResource.title_gruzp_doc:</label>
                                                 <input type="number" class="form-control inp-epd" id="uz_vag_gruzp" name="uz_vag_gruzp" title="ЭПД [OTPR/VAGON/gruzp] -> Грузоподъемность по ЭПД" data-mode="all" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
-                                            <div class="col-md-4 mb-1 text-left">
+                                            <div class="col-md-3 mb-1 text-left">
                                                 <label for="card_vag_gruzp" class="col-form-label">@IDSRWTResource.title_gruzp_uz:</label>
                                                 <input type="number" class="form-control inp-uz" id="card_vag_gruzp" name="card_vag_gruzp" title="БД УЗ [https://uz.gov.ua/car_info/index.php] -> Грузоподъемность по БД УЗ" data-mode="view-global" data-edit="" data-form="transceiver" data-type="vagon-card">
+                                                <div class="invalid-feedback">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3 mb-1 text-left">
+                                                <label for="card_vag_tara" class="col-form-label">@IDSRWTResource.title_tara_uz:</label>
+                                                <input type="number" class="form-control inp-uz" id="card_vag_tara" name="card_vag_tara" title="БД УЗ [https://uz.gov.ua/car_info/index.php] -> Тара по БД УЗ" data-mode="view-global" data-edit="" data-form="transceiver" data-type="vagon-card">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
@@ -584,7 +590,7 @@
                                                 </div>
                                                 <div id="epd-cars" class="collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="">
                                                     <div class="card-block">
-                                                        <table class="table table-striped table-sm " id="table-sender-doc" style="width:100%; font-size:0.8rem;"></table>
+                                                        <table class="table table-striped table-sm " id="table-sender-doc" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
                                                     </div>
                                                 </div>
                                             </div>
@@ -601,7 +607,7 @@
                                                 </div>
                                                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
                                                     <div class="card-block">
-                                                        <table class="table table-striped table-bordered" id="table-acts" style="width:100%; font-size:0.8rem;"></table>
+                                                        <table class="table table-striped table-bordered" id="table-acts" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
                                                     </div>
                                                 </div>
                                             </div>
@@ -781,7 +787,7 @@
                                                 </div>
                                                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
                                                     <div class="card-block">
-                                                        <table class="table table-striped table-bordered" id="table-cont" style="width:100%; font-size:0.8rem;"></table>
+                                                        <table class="table table-striped table-bordered" id="table-cont" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
                                                     </div>
                                                 </div>
                                             </div>
@@ -934,13 +940,13 @@
         </div>
         <fieldset class="border-primary">
             <legend class="text-primary">Документы</legend>
-            <table class="table table-striped table-bordered mb-1" id="table-list-epd" style="width:100%; font-size:0.8rem;"></table>
+            <table class="table table-striped table-bordered mb-1" id="table-list-epd" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
             <fieldset class="border-secondary">
                 <legend class="text-secondary">Перечень вагонов</legend>
                 <div id="loading-cars" class="text-danger" style="display:none">
                     Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                 </div>
-                <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem;"></table>
+                <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem; table-layout: fixed"></table>
             </fieldset>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
@@ -971,7 +977,7 @@
             <div id="loading-cars" class="text-danger" style="display:none">
                 Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
             </div>
-            <table class="table table-striped table-bordered mb-1" id="table-list-manual-car" style="width:100%; font-size:0.8rem;"></table>
+            <table class="table table-striped table-bordered mb-1" id="table-list-manual-car" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
@@ -1065,7 +1071,7 @@
     </form>
 </div>
 
-<div class="cd-print-detali">
+@*<div class="cd-print-detali">
     <div class="container-fluid">
         <form class="cd-form bg-white">
             <!-- Что распечатать находится внутри  .to_print -->
@@ -1085,7 +1091,7 @@
                         <div class="col-sm-2 text-left">2020-06-16 00:00:00</div>
                     </div>
                     <div class="row mb-4">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="">
                             <thead>
                                 <tr>
                                     <th scope="col">№</th>
@@ -1152,13 +1158,13 @@
                         <tr><td>Сок Добрый</td><td>70 руб.</td><td>12.02.2015</td><td>1 шт.</td></tr>
                         <tr><td>Хлеб пшеничный</td><td>23 руб.</td><td>12.02.2015</td><td>2 шт.</td></tr>
                     </table>
-                    <hr>*@
+                    <hr>
 
             </div>
             <div class="row m-0">
                 <div class="col-sm-12 text-center bg-light pt-3 pb-3">Нажмите <button type="button" id="print_report" class="btn btn-primary btn">Печать</button> чтобы напечатать отчет</div>
             </div>
-            @*Нажмите <button class="myprint">Печать</button> чтобы напечатать*@
+            @*Нажмите <button class="myprint">Печать</button> чтобы напечатать
         </form>
         <a href="#0" class="close cd-img-replace">Close</a>
     </div>
@@ -1166,7 +1172,7 @@
 
 
 
-@*<div id="accordion" role="tablist" aria-multiselectable="true">
+<div id="accordion" role="tablist" aria-multiselectable="true">
         <div class="card border-primary">
             <div class="card-header text-left" role="tab" id="headingOne">
                 <div class="mb-0">
