--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -38,7 +38,7 @@
             <div class="form-row">
                 <div class="col-md-12">
                     @*<div class="alert alert-success fade show" id="global-success-alert"> <div id="global-message"></div> </div>*@
-                    <table class='compact cell-border display' id="table-cards-wagons" style="width:100%; table-layout: fixed" cellpadding="0"></table>
+                    <table class='compact cell-border display' id="table-cards-wagons" style="width:100%;" cellpadding="0"></table>
                 </div>
             </div>
         </div>
