--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -90,7 +90,7 @@
         <div class="card border-dark mb-3">
             <div class="card-header bg-secondary text-white">Поезда по прибытию</div>
             <div class="card-body text-dark pl-3 pr-3">
-                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%; table-layout: fixed"></table>
+                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%;"></table>
             </div>
         </div>
     </div>
@@ -173,7 +173,7 @@
                                     @*<h5 class="card-title">Special title treatment</h5>
                                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>*@
-                                    <table class="table table-striped table-bordered" id="table-arrival-cars" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
+                                    <table class="table table-striped table-bordered" id="table-arrival-cars" style="width:100%; font-size:0.8rem;"></table>
                                 </div>
                                 <div class="card-footer text-muted">
                                     
@@ -590,7 +590,7 @@
                                                 </div>
                                                 <div id="epd-cars" class="collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="">
                                                     <div class="card-block">
-                                                        <table class="table table-striped table-sm " id="table-sender-doc" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
+                                                        <table class="table table-striped table-sm " id="table-sender-doc" style="width:100%; font-size:0.8rem;"></table>
                                                     </div>
                                                 </div>
                                             </div>
@@ -607,7 +607,7 @@
                                                 </div>
                                                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
                                                     <div class="card-block">
-                                                        <table class="table table-striped table-bordered" id="table-acts" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
+                                                        <table class="table table-striped table-bordered" id="table-acts" style="width:100%; font-size:0.8rem;"></table>
                                                     </div>
                                                 </div>
                                             </div>
@@ -787,7 +787,7 @@
                                                 </div>
                                                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
                                                     <div class="card-block">
-                                                        <table class="table table-striped table-bordered" id="table-cont" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
+                                                        <table class="table table-striped table-bordered" id="table-cont" style="width:100%; font-size:0.8rem;"></table>
                                                     </div>
                                                 </div>
                                             </div>
@@ -940,13 +940,13 @@
         </div>
         <fieldset class="border-primary">
             <legend class="text-primary">Документы</legend>
-            <table class="table table-striped table-bordered mb-1" id="table-list-epd" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
+            <table class="table table-striped table-bordered mb-1" id="table-list-epd" style="width:100%; font-size:0.8rem;"></table>
             <fieldset class="border-secondary">
                 <legend class="text-secondary">Перечень вагонов</legend>
                 <div id="loading-cars" class="text-danger" style="display:none">
                     Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                 </div>
-                <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem; table-layout: fixed"></table>
+                <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem;"></table>
             </fieldset>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
@@ -977,7 +977,7 @@
             <div id="loading-cars" class="text-danger" style="display:none">
                 Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
             </div>
-            <table class="table table-striped table-bordered mb-1" id="table-list-manual-car" style="width:100%; font-size:0.8rem; table-layout: fixed"></table>
+            <table class="table table-striped table-bordered mb-1" id="table-list-manual-car" style="width:100%; font-size:0.8rem;"></table>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
