--- a/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
@@ -49,7 +49,7 @@
         <div class="card-body">
             <div class="form-row">
                 <div class="col-md-12 mb-3">
-                    <table class='table table-striped table-bordered' id="table-wagons-park" style="width:100%; table-layout: fixed" cellpadding="0"></table>
+                    <table class='table table-striped table-bordered' id="table-wagons-park" style="width:100%;" cellpadding="0"></table>
                 </div>
             </div>
         </div>
