--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -108,13 +108,39 @@
 
 <div id="dialog-confirm"></div>
 
-<div id="change_group" title="" style="display:none">
-    <div class="alert" id="change_group_alert"></div>
-    <form id="form-change_group">
+<div id="change_group_limit" title="" style="display:none">
+    <div class="alert" id="change_group_limit_alert"></div>
+    <form id="form_change_group_limit">
         <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="change_group_cargo_group" class="col-sm-5 col-form-label">@DirectoryResource.title_change_group_cargo_group:</label>
+            <label for="change_group_limiting" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_limiting:</label>
             <div class="col-sm-7">
-                <select class="form-control" id="change_group_cargo_group" name="change_group_cargo_group" required="required"></select>
+                <select class="form-control" id="change_group_limiting" name="change_group_limiting" required="required"></select>
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>
+
+<div id="change_group_operator" title="" style="display:none">
+    <div class="alert" id="change_group_operator_alert"></div>
+    <form id="form_change_group_operator">
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="change_group_operator" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_operator_car_new:</label>
+            <div class="col-sm-7">
+                <select class="form-control" id="change_group_operator" name="change_group_operator" required="required"></select>
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="change_group_rent_start" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_operator_car_rent_start:</label>
+            <div class="col-sm-7">
+                <input type="datetime" class="form-control" id="change_group_rent_start" name="change_group_rent_start">
                 <div class="invalid-feedback">
 
                 </div>
