end comparison der_wagon run test

--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -101,7 +101,7 @@
                             </div>
                             <div class="form-row mt-2">
                                 <div class="col-xl-1">
-                                    <label for="wagon-wagon_operator_comparison" class="col-form-label">Оператор:</label>
+                                    <label for="wagon_operator_comparison" class="col-form-label">Оператор:</label>
                                 </div>
                                 <div class="col-xl-3">
                                     <select class="form-control" id="wagon_operator_comparison" style="font-size:inherit"></select>
@@ -109,13 +109,57 @@
                             </div>
                             <div class="form-row mt-2">
                                 <div class="col-xl-1">
-                                    <label for="wagon-wagon_operator_comparison" class="col-form-label">Перечень:</label>
+                                    <label for="num_cars_comparison" class="col-form-label">Перечень:</label>
                                 </div>
                                 <div class="col-xl-9">
                                     <textarea class="form-control" id="num_cars_comparison" name="num_cars_comparison" rows="3" style="font-size:inherit"></textarea>
                                 </div>
                                 <div class="col-xl-2">
                                     <button type="button" class="btn btn-primary" id="cars_comparison_num">Сравнить</button>
+                                </div>
+                            </div>
+                            <div class="form-row mt-2">
+                                <div class="col-xl-1">
+                                    <label for="num_cars_comparison_not" class="col-form-label">Отсутсвуют:</label>
+                                </div>
+                                <div class="col-xl-9">
+                                    <textarea class="form-control" id="num_cars_comparison_not" name="num_cars_comparison_not" rows="2" style="font-size:inherit"></textarea>
+                                </div>
+                                <div class="col-xl-2">
+                                    <button type="button" class="btn btn-primary" id="cars_comparison_num_not" disabled>Добавить</button>
+                                </div>
+                            </div>
+                            <div class="form-row mt-2">
+                                <div class="col-xl-1">
+                                    <label for="num_cars_comparison_yes" class="col-form-label">Соответствуют:</label>
+                                </div>
+                                <div class="col-xl-9">
+                                    <textarea class="form-control" id="num_cars_comparison_yes" name="num_cars_comparison_yes" rows="2" style="font-size:inherit"></textarea>
+                                </div>
+                                <div class="col-xl-2">
+                                    <button type="button" class="btn btn-primary" id="cars_comparison_num_yes" disabled>Показать</button>
+                                </div>
+                            </div>
+                            <div class="form-row mt-2">
+                                <div class="col-xl-1">
+                                    <label for="num_cars_comparison_no" class="col-form-label">Не соответствуют:</label>
+                                </div>
+                                <div class="col-xl-9">
+                                    <textarea class="form-control" id="num_cars_comparison_no" name="num_cars_comparison_no" rows="2" style="font-size:inherit"></textarea>
+                                </div>
+                                <div class="col-xl-2">
+                                    <button type="button" class="btn btn-primary" id="cars_comparison_num_no" disabled>Показать</button>
+                                </div>
+                            </div>
+                            <div class="form-row mt-2">
+                                <div class="col-xl-1">
+                                    <label for="num_cars_comparison_change" class="col-form-label">Теперь не принадлежат:</label>
+                                </div>
+                                <div class="col-xl-9">
+                                    <textarea class="form-control" id="num_cars_comparison_change" name="num_cars_comparison_change" rows="2" style="font-size:inherit"></textarea>
+                                </div>
+                                <div class="col-xl-2">
+                                    <button type="button" class="btn btn-primary" id="cars_comparison_num_change" disabled>Показать</button>
                                 </div>
                             </div>
                         </div>
