--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -34,43 +34,48 @@ input {
 -------------------------------- */
 
 .ui-autocomplete{
-	z-index: 202;
+	z-index: 200;
 }
+
+.ui-dialog{
+	z-index: 100;
+}
+
 
 /*.ui-selectable-helper {
 	position: absolute;
-	z-index: 200;
+	z-index: 202;
 	border: 1px dotted black;
 }*/
 
 .date-picker {
-    z-index: 202;
+    z-index: 302;
 }
 
 .date-picker-wrapper {
-    z-index: 201;
+    z-index: 301;
 }
 
     .date-picker-wrapper .gap {
-        z-index: 201;
+        z-index: 301;
     }
 
         .date-picker-wrapper .gap .gap-line .gap-1 {
-            z-index: 201;
+            z-index: 301;
         }
 
         .date-picker-wrapper .gap .gap-line .gap-2 {
-            z-index: 202;
+            z-index: 302;
         }
 
         .date-picker-wrapper .gap .gap-line .gap-3 {
-            z-index: 202;
+            z-index: 302;
         }
 
         .date-picker-wrapper .gap .gap-top-mask {
-            z-index: 203;
+            z-index: 303;
         }
 
         .date-picker-wrapper .gap .gap-bottom-mask {
-            z-index: 203;
+            z-index: 303;
         }
