dev letters web-form

--- a/WEB_UI/Areas/Directory/Views/Home/InstructionalLetters.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/InstructionalLetters.cshtml
@@ -45,7 +45,7 @@
                             <div class="card border-dark">
                                 <div class="card-header bg-secondary text-white text-uppercase">Перечень писем</div>
                                 <div class="card-body text-dark pl-3 pr-3">
-                                    <table class="display table-bordered" id="table-letters" style="width:100%; table-layout: fixed"></table>
+                                    <table class="table table-bordered" id="table-letters" style="width:100%; table-layout: fixed"></table>
                                 </div>
                             </div>
                         </div>
@@ -67,8 +67,6 @@
         </div>
     </div>
 </div>
-
-<input type="text" class="form-control" id="add_edit_destination_station1" name="add_edit_destination_station1">
 
 <div id="add_edit" title="" style="display:none">
     <div class="alert" id="add_edit_alert"></div>
@@ -121,5 +119,7 @@
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
 </div>
+
+<div id="dialog-confirm"></div>
 
 
