--- a/WEB_UI/Views/Shared/_IDS.cshtml
+++ b/WEB_UI/Views/Shared/_IDS.cshtml
@@ -151,8 +151,8 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-amkr sr-icons"></i>
-                        <a href='@Url.Action("Index", "Home", new { Area = "Directory" })'><h3>Справочники</h3></a>
-                        <p class="text-muted">Справочники ИДС и УЗ, сервисы администрирования справочников</p>
+                        <a href='@Url.Action("Index", "Home", new { Area = "Directory" })'><h3>Утилиты</h3></a>
+                        <p class="text-muted">Справочники ИДС и УЗ, сервисы и утилиты</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
